--- a/css/_main.scss
+++ b/css/_main.scss
@@ -20,6 +20,7 @@ main {
             flex-direction: column;
             align-items: center;
             gap: 30px;
+            width: 80%;
 
             .main-title {
                 font-size: 48px;
