--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,7 @@ main .mainvisual .main-copy {
   flex-direction: column;
   align-items: center;
   gap: 30px;
+  width: 80%;
 }
 main .mainvisual .main-copy .main-title {
   font-size: 48px;
@@ -493,5 +494,22 @@ footer .btn-53:hover span:nth-child(6) {
   }
   footer .sns img {
     width: 30px;
+  }
+}
+@media (max-width: 500px) {
+  main .mainvisual .main-copy {
+    top: 65%;
+  }
+  main .mainvisual .main-copy .main-title {
+    font-size: 32px;
+  }
+  main .mainvisual .main-copy .btn {
+    font-size: 24px;
+  }
+  main #consept .consept-title {
+    font-size: 24px;
+  }
+  main #consept .consept-text {
+    font-size: 16px;
   }
 }/*# sourceMappingURL=style.css.map */
